--- a/Pokedex.css
+++ b/Pokedex.css
@@ -1,1 +1,57 @@
 
+.main{
+    margin-top: 20px;
+   border: 4px solid gold;
+    background-color: red;
+  width :400px;
+ justify-self: center;
+  height: 610px;
+}
+li{
+  list-style: none;
+  color: azure;
+}
+.nameDisplay{
+
+  width: 99%;
+  height: 40px;
+  background-color: silver;
+  display: flex;
+  justify-content: space-between;
+  
+  padding-left: 5px;
+  margin-bottom: 0;
+  padding-bottom: 10px;
+}
+.nameDisplay h3{
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+font-weight: 100;
+ color: white;
+ text-decoration:wavy;
+ padding-left: 20px;
+
+}
+.nameDisplay img{
+  padding-top: 15px;
+  padding-right: 15px;
+  
+ }
+.Imagedisplay{
+justify-self: center;
+align-self: center;
+display: flex;
+  width: 95%;
+  height: 250px;
+  background-color: rgb(232, 230, 230);
+  border: none;
+}
+.Desc{
+  justify-self: center;
+  align-self: center;
+  
+    width: 100%;
+    height: 48%;
+    background-color: rgb(33, 32, 32);
+    justify-content: start;
+}
+
