--- a/Pokedex.css
+++ b/Pokedex.css
@@ -1,57 +1,188 @@
-
 .main{
-    margin-top: 20px;
-   border: 4px solid gold;
-    background-color: red;
-  width :400px;
- justify-self: center;
-  height: 610px;
+  margin-top: 20px;
+ border: 4px solid gold;
+  background-color: red;
+  filter: drop-shadow(10px 10px 10px rgb(255, 243, 149));
+width :400px;
+justify-self: center;
+height: 610px;
+animation: slide-in 3s ease-in 1s forwards;
 }
+.nav{
+width: 40%;
+justify-self: center;
+height: 100px;
+background-color: tomato;
+margin-top: 0;
+
+}
+.nav h1{
+margin-top: 0;
+font-size: 90px;
+align-self: center;
+text-shadow: 5px 0 azure, -5px 0 azure, 0 5px azure, 0 -5px azure;
+justify-self: center;
+}
+body{font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
 li{
-  list-style: none;
-  color: azure;
+list-style: none;
+color: azure;
+margin-top: 5px;
+}
+ul{
+padding-right: 0;
+padding-left: 5px;
+border:2px solid rgb(255, 255, 255);
+
+margin-top: 10px;
+width: 50%;
+height: auto;
+margin-left: 30px;
 }
 .nameDisplay{
 
-  width: 99%;
-  height: 40px;
-  background-color: silver;
-  display: flex;
-  justify-content: space-between;
-  
-  padding-left: 5px;
-  margin-bottom: 0;
-  padding-bottom: 10px;
+width: 99%;
+height: 40px;
+background-color: silver;
+display: flex;
+justify-content: space-between;
+
+padding-left: 5px;
+margin-bottom: 0;
+padding-bottom: 10px;
 }
 .nameDisplay h3{
 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 font-weight: 100;
- color: white;
- text-decoration:wavy;
- padding-left: 20px;
+color: white;
+text-decoration:wavy;
+padding-left: 20px;
 
 }
 .nameDisplay img{
-  padding-top: 15px;
-  padding-right: 15px;
-  
- }
+padding-top: 10px;
+padding-right: 10px;
+
+
+}
 .Imagedisplay{
+border: 5px solid rgb(65, 65, 65);
+border-top: none;
 justify-self: center;
 align-self: center;
+justify-content: center;
 display: flex;
-  width: 95%;
-  height: 250px;
-  background-color: rgb(232, 230, 230);
-  border: none;
+width: 95%;
+border-radius: 0px 0px 10px 10px;
+height: 250px;
+background-color: rgb(232, 230, 230);
+
 }
 .Desc{
-  justify-self: center;
-  align-self: center;
+justify-self: center;
+align-self: center;
+margin-top: 10px;
+  width: 100%;
+  height: 48%;
   
-    width: 100%;
-    height: 48%;
-    background-color: rgb(33, 32, 32);
-    justify-content: start;
+  background-color: rgb(33, 32, 32);
+  justify-content: start;
 }
+
+button{
+width: 200px;
+height: 50px;
+background-color: red;
+display: flex;
+justify-self: center;
+align-self: center;
+text-align: center;
+justify-content: center;
+align-content: center;
+margin-top: 20px;
+border: 5px solid gold;
+font-size: 40px;
+color: azure;
+font-weight: bold;
+animation: slide-intwo 1s ease-in 1s forwards;
+}
+
+
+
+form{
+margin-top: 20px;
+display: flex;
+justify-self: center;
+
+animation: slide-inthree 1s ease-in 1s forwards;
+}
+
+form input{
+   color: red;
+
+   background-color: black;
+border:2px dashed gold;
+}
+form input:focus{
+animation: foc .2s ease-in .05s forwards;
+outline: none;
+background-color: rgb(255, 255, 255);
+border:2px solid gold;
+}
+
+
+
+@keyframes slide-in {
+0% {
+transform: translateY(-100%);
+
+}
+25%{
+
+transform: rotateY(150deg);
+}
+
+50%{
+
+transform: rotateY(360deg);
+}
+100% {
+transform: translateY(0);
+
+}
+}
+@keyframes slide-intwo {
+0% {
+transform: translateX(-500%);
+
+}
+
+100% {
+transform: translateX(0);
+
+}
+}
+@keyframes slide-inthree {
+0% {
+transform: translateY(1000%);
+
+}
+
+100% {
+transform: translateY(0);
+
+}
+}
+@keyframes foc {
+0%{
+transform: scale(1);
+
+}
+
+100%{
+ transform: scale(1.5);
+
+}
+}
+
 
